# BUNMPC

./: README.md
iterative_supervised_learning/: .gitignore  CMakeLists.txt  LICENSE  algorithm_flow_diagram.drawio  package.xml  setup.py
iterative_supervised_learning/examples/controllers/: robot_id_controller.py
iterative_supervised_learning/examples/envs/: pybullet_env.py
iterative_supervised_learning/examples/iterative_algorithm/: README.md  behavioral_cloning_evaluation_effects_of_cc_replanning.py  behavioral_cloning_evaluation_with_cc_replan.py  behavioral_cloning_train.py  behavioral_cloning_train_multi_database.py  behavioral_cloning_vc_evaluation_iterative.py  behavioral_cloning_vc_evaluation_multi_database.py  contact_planner.py  dagger_modified.py  data_collection.py  locosafedagger_modified.py  max_force_search.py  plot_vc_goal_error.py  safedagger_modified.py  simulation.py  sweep_policy.py  test_bayesian_optimization.py  test_bayesian_update.py  test_modules.py  test_mpc.py  test_mpc_with_pertubation.py  test_nvidia.py  test_policy_remembering.py  test_policy_rollout_with_past_goals.py  test_policy_with_cc_replan.py  test_rollout_mpc+policy.py  test_sweep_policy.py  test_train_policy.py  test_trained_policy.py  utils.py  visualShapeBench.json_0.json
iterative_supervised_learning/examples/motions/cyclic/: solo12_bound.py  (+3 more)
iterative_supervised_learning/examples/mpc/: abstract_cyclic_gen.py
iterative_supervised_learning/goal_conditioned_behavioral_cloning.egg-info/: PKG-INFO  SOURCES.txt
iterative_supervised_learning/src/motion_planner/: biconvex.cpp
(+41 files in other folders)
