<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    
    <name>iterative_supervised_learning</name>
    
    <version>1.0.0</version>
    
    <description>
        This repo contains the centroidal motion planner based on a Biconvex solver
    </description>
    
    <author email="xun.pua@tum.de">Xun Pua</author>
    <maintainer "xun.pua@tum.de">Xun Pua</maintainer>
    
    <license>BSD-3-clause</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>pybullet</depend>
    <depend>pinocchio</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
